Fix some usages of deprecation (#61)